Fixed User profile UPDATE. This took too long

--- a/cid-spa/src/index.css
+++ b/cid-spa/src/index.css
@@ -165,8 +165,8 @@ body {
 
 .settings_button{
     position: absolute;
-    right: 1%;
-    top: 3%;
+    right: 10px;
+    top: 11px;
     padding: 5px;
     border-radius: 5px;
 }
